parse.output
Terminals unused in grammar

   STRING
   TYPEDEF
   ENUMBER
   _IMAGINARY


State 15 conflicts: 4 shift/reduce
State 19 conflicts: 2 shift/reduce
State 21 conflicts: 4 shift/reduce
State 22 conflicts: 4 shift/reduce
State 50 conflicts: 2 shift/reduce
State 51 conflicts: 1 shift/reduce
State 54 conflicts: 1 shift/reduce
State 57 conflicts: 1 shift/reduce
State 60 conflicts: 2 shift/reduce
State 61 conflicts: 1 shift/reduce
State 64 conflicts: 2 shift/reduce
State 65 conflicts: 1 shift/reduce
State 99 conflicts: 1 shift/reduce
State 106 conflicts: 1 shift/reduce
State 109 conflicts: 1 shift/reduce
State 192 conflicts: 1 shift/reduce
State 354 conflicts: 1 shift/reduce
State 384 conflicts: 1 shift/reduce
State 410 conflicts: 1 shift/reduce


Grammar

    0 $accept: start $end

    1 start: %empty
    2      | start top_level_decl

    3 top_level_decl: decl
    4               | func_def

    5 func_def: full_func_decl compound_stmt

    6 full_func_decl: decl_spec func_decl

    7 decl_or_stmt_list: decl_or_stmt
    8                  | decl_or_stmt_list decl_or_stmt

    9 decl_or_stmt: decl
   10             | stmt

   11 decl: decl_spec init_decl_list ';'
   12     | forward_decl
   13     | struct_spec ';'

   14 decl_spec: stg_spec
   15          | type_spec
   16          | struct_spec
   17          | type_qual
   18          | func_spec
   19          | decl_spec type_spec
   20          | decl_spec struct_spec
   21          | decl_spec stg_spec
   22          | decl_spec type_qual
   23          | decl_spec func_spec

   24 init_decl_list: declarator
   25               | init_decl_list ',' declarator

   26 stg_spec: AUTO
   27         | EXTERN
   28         | REGISTER
   29         | STATIC

   30 func_spec: INLINE

   31 type_spec: SHORT
   32          | SHORT INT
   33          | SIGNED SHORT
   34          | SIGNED SHORT INT
   35          | INT
   36          | SIGNED INT
   37          | SIGNED
   38          | LONG
   39          | LONG INT
   40          | SIGNED LONG
   41          | SIGNED LONG INT
   42          | LONG LONG
   43          | LONG LONG INT
   44          | SIGNED LONG LONG
   45          | SIGNED LONG LONG INT
   46          | UNSIGNED SHORT
   47          | SHORT UNSIGNED
   48          | UNSIGNED
   49          | UNSIGNED LONG
   50          | LONG UNSIGNED
   51          | UNSIGNED LONG LONG
   52          | LONG LONG UNSIGNED
   53          | UNSIGNED SHORT INT
   54          | SHORT UNSIGNED INT
   55          | UNSIGNED INT
   56          | UNSIGNED LONG INT
   57          | LONG UNSIGNED INT
   58          | UNSIGNED LONG LONG INT
   59          | LONG LONG UNSIGNED INT
   60          | CHAR
   61          | SIGNED CHAR
   62          | UNSIGNED CHAR
   63          | _BOOL
   64          | FLOAT
   65          | DOUBLE
   66          | LONG DOUBLE
   67          | FLOAT _COMPLEX
   68          | DOUBLE _COMPLEX
   69          | LONG DOUBLE _COMPLEX
   70          | VOID

   71 struct_spec: enum_type_spec
   72            | struct_type_spec
   73            | union_type_spec

   74 type_qual: CONST
   75          | VOLATILE
   76          | RESTRICT

   77 declarator: pointer_decl
   78           | direct_decl

   79 direct_decl: simple_decl
   80            | '(' declarator ')'
   81            | arr_decl
   82            | func_decl

   83 simple_decl: IDENT

   84 pointer_decl: pointer direct_decl

   85 pointer: '*'
   86        | '*' pointer

   87 abstract_decl: pointer
   88              | direct_abstract_decl
   89              | pointer direct_abstract_decl

   90 arr_decl: direct_decl '[' ']'
   91         | direct_decl '[' NUMBER ']'

   92 func_decl: direct_decl '(' param_type_list ')'
   93          | direct_decl '(' ')'
   94          | direct_decl '(' ident_list ')'

   95 param_type_list: param_list
   96                | param_list ',' ELLIPSIS

   97 param_list: param_decl
   98           | param_list ',' param_decl

   99 param_decl: decl_spec declarator
  100           | decl_spec
  101           | decl_spec abstract_decl

  102 enum_type_spec: enum_type_def
  103               | enum_type_ref

  104 enum_type_def: ENUM '{' enum_def_list '}'
  105              | ENUM IDENT '{' enum_def_list '}'
  106              | ENUM '{' enum_def_list ',' '}'
  107              | ENUM IDENT '{' enum_def_list ',' '}'

  108 enum_type_ref: ENUM IDENT

  109 enum_def_list: enum_constant_def
  110              | enum_def_list ',' enum_constant_def

  111 enum_constant_def: IDENT
  112                  | IDENT '=' expr

  113 forward_decl: STRUCT IDENT ';'

  114 struct_type_spec: struct_type_def struct_block
  115                 | struct_type_ref

  116 struct_type_def: STRUCT '{'
  117                | STRUCT IDENT '{'

  118 struct_block: field_list '}'

  119 struct_type_ref: STRUCT IDENT

  120 field_list: component_decl
  121           | field_list component_decl

  122 component_decl: component_decl_spec component_decl_list ';'

  123 component_decl_spec: type_spec
  124                    | struct_spec

  125 component_decl_list: component_declarator
  126                    | component_decl_list ',' component_declarator

  127 component_declarator: declarator
  128                     | bit_field

  129 bit_field: ':' NUMBER
  130          | declarator ':' NUMBER

  131 union_type_spec: union_type_def struct_block
  132                | union_type_ref

  133 union_type_def: UNION '{'
  134               | UNION IDENT '{'

  135 union_type_ref: UNION IDENT

  136 direct_abstract_decl: '(' abstract_decl ')'
  137                     | direct_abstract_decl '[' NUMBER ']'
  138                     | direct_abstract_decl '[' expr ']'
  139                     | direct_abstract_decl '[' '*' ']'
  140                     | direct_abstract_decl '(' param_type_list ')'
  141                     | '[' NUMBER ']'
  142                     | '[' expr ']'
  143                     | '[' '*' ']'
  144                     | '(' param_type_list ')'
  145                     | '[' ']'
  146                     | '(' ')'

  147 stmt: expr ';'
  148     | label ':' stmt
  149     | compound_stmt
  150     | conditional_stmt
  151     | iterative_stmt
  152     | SWITCH '(' expr ')' stmt
  153     | BREAK ';'
  154     | CONTINUE ';'
  155     | GOTO IDENT ';'
  156     | return_stmt
  157     | null_stmt

  158 @1: %empty

  159 conditional_stmt: IF '(' expr ')' @1 conditional_body

  160 conditional_body: stmt
  161                 | stmt ELSE stmt

  162 @2: %empty

  163 iterative_stmt: DO @2 stmt WHILE '(' expr ')' ';'

  164 @3: %empty

  165 iterative_stmt: WHILE '(' expr ')' @3 stmt
  166               | FOR for_expr stmt

  167 label: IDENT
  168      | CASE const_expr
  169      | DEFAULT

  170 const_expr: NUMBER
  171           | CHARLIT

  172 for_expr: '(' ';' ';' ';' ')'
  173         | '(' expr ';' ';' ')'
  174         | '(' ';' expr ';' ')'
  175         | '(' ';' ';' expr ')'
  176         | '(' expr ';' expr ';' ')'
  177         | '(' expr ';' ';' expr ')'
  178         | '(' ';' expr ';' expr ')'
  179         | '(' expr ';' expr ';' expr ')'

  180 $@4: %empty

  181 compound_stmt: '{' $@4 decl_or_stmt_list '}'
  182              | '{' '}'

  183 return_stmt: RETURN expr ';'
  184            | RETURN ';'

  185 null_stmt: ';'

  186 primary_expr: IDENT
  187             | NUMBER
  188             | '(' expr ')'

  189 postfix_expr: primary_expr
  190             | subscript_expr
  191             | comp_selec_expr
  192             | function_call
  193             | postinc_expr
  194             | postdec_expr

  195 subscript_expr: postfix_expr '[' expr ']'

  196 function_call: postfix_expr '(' expr_list ')'
  197              | postfix_expr '(' ')'

  198 expr_list: assignment_expr
  199          | expr_list ',' assignment_expr

  200 comp_selec_expr: postfix_expr '.' IDENT
  201                | postfix_expr INDSEL IDENT

  202 postinc_expr: postfix_expr PLUSPLUS

  203 postdec_expr: postfix_expr MINUSMINUS

  204 cast_expr: unary_expr
  205          | '(' type_spec ')' cast_expr
  206          | '(' struct_spec ')' cast_expr

  207 unary_expr: postfix_expr
  208           | SIZEOF '(' type_spec ')'
  209           | SIZEOF unary_expr
  210           | '-' cast_expr
  211           | '+' cast_expr
  212           | '!' cast_expr
  213           | '~' cast_expr
  214           | '&' cast_expr
  215           | '*' cast_expr
  216           | PLUSPLUS unary_expr
  217           | MINUSMINUS unary_expr

  218 multiplicative_expr: cast_expr
  219                    | multiplicative_expr '*' cast_expr
  220                    | multiplicative_expr '/' cast_expr
  221                    | multiplicative_expr '%' cast_expr

  222 additive_expr: multiplicative_expr
  223              | additive_expr '+' multiplicative_expr
  224              | additive_expr '-' multiplicative_expr

  225 shift_expr: additive_expr
  226           | shift_expr SHL additive_expr
  227           | shift_expr SHR additive_expr

  228 relational_expr: shift_expr
  229                | relational_expr '<' shift_expr
  230                | relational_expr '>' shift_expr
  231                | relational_expr LTEQ shift_expr
  232                | relational_expr GTEQ shift_expr

  233 equality_expr: relational_expr
  234              | equality_expr EQEQ relational_expr
  235              | equality_expr NOTEQ relational_expr

  236 bitwise_or_expr: bitwise_xor_expr
  237                | bitwise_or_expr '|' bitwise_xor_expr

  238 bitwise_xor_expr: bitwise_and_expr
  239                 | bitwise_xor_expr '^' bitwise_and_expr

  240 bitwise_and_expr: equality_expr
  241                 | bitwise_and_expr '&' equality_expr

  242 logical_or_expr: logical_and_expr
  243                | logical_or_expr LOGOR logical_and_expr

  244 logical_and_expr: bitwise_or_expr
  245                 | logical_and_expr LOGAND bitwise_or_expr

  246 conditional_expr: logical_or_expr
  247                 | logical_or_expr '?' expr ':' conditional_expr

  248 assignment_expr: conditional_expr
  249                | unary_expr '=' assignment_expr
  250                | unary_expr PLUSEQ assignment_expr
  251                | unary_expr MINUSEQ assignment_expr
  252                | unary_expr TIMESEQ assignment_expr
  253                | unary_expr DIVEQ assignment_expr
  254                | unary_expr MODEQ assignment_expr
  255                | unary_expr SHLEQ assignment_expr
  256                | unary_expr SHREQ assignment_expr
  257                | unary_expr ANDEQ assignment_expr
  258                | unary_expr OREQ assignment_expr
  259                | unary_expr XOREQ assignment_expr

  260 comma_expr: assignment_expr
  261           | comma_expr ',' assignment_expr

  262 expr: comma_expr

  263 ident_list: IDENT
  264           | ident_list ',' IDENT


Terminals, with rules where they appear

$end (0) 0
'!' (33) 212
'%' (37) 221
'&' (38) 214 241
'(' (40) 80 92 93 94 136 140 144 146 152 159 163 165 172 173 174 175
    176 177 178 179 188 196 197 205 206 208
')' (41) 80 92 93 94 136 140 144 146 152 159 163 165 172 173 174 175
    176 177 178 179 188 196 197 205 206 208
'*' (42) 85 86 139 143 215 219
'+' (43) 211 223
',' (44) 25 96 98 106 107 110 126 199 261 264
'-' (45) 210 224
'.' (46) 200
'/' (47) 220
':' (58) 129 130 148 247
';' (59) 11 13 113 122 147 153 154 155 163 172 173 174 175 176 177
    178 179 183 184 185
'<' (60) 229
'=' (61) 112 249
'>' (62) 230
'?' (63) 247
'[' (91) 90 91 137 138 139 141 142 143 145 195
']' (93) 90 91 137 138 139 141 142 143 145 195
'^' (94) 239
'{' (123) 104 105 106 107 116 117 133 134 181 182
'|' (124) 237
'}' (125) 104 105 106 107 118 181 182
'~' (126) 213
error (256)
NUMBER (258) 91 129 130 137 141 170 187
IDENT (259) 83 105 107 108 111 112 113 117 119 134 135 155 167 186
    200 201 263 264
STRING (260)
CHARLIT (261) 171
BREAK (262) 153
CASE (263) 168
CONTINUE (264) 154
DEFAULT (265) 169
DO (266) 163
ELSE (267) 161
ENUM (268) 104 105 106 107 108
FOR (269) 166
GOTO (270) 155
IF (271) 159
RETURN (272) 183 184
SWITCH (273) 152
TYPEDEF (274)
WHILE (275) 163 165
INDSEL (276) 201
PLUSPLUS (277) 202 216
MINUSMINUS (278) 203 217
SIZEOF (279) 208 209
SHL (280) 226
SHR (281) 227
GTEQ (282) 232
LTEQ (283) 231
EQEQ (284) 234
NOTEQ (285) 235
LOGAND (286) 245
LOGOR (287) 243
INDIRECTION (288)
ADDRESS (289)
PLUSEQ (290) 250
MINUSEQ (291) 251
TIMESEQ (292) 252
DIVEQ (293) 253
MODEQ (294) 254
SHLEQ (295) 255
SHREQ (296) 256
ANDEQ (297) 257
OREQ (298) 258
XOREQ (299) 259
AUTO (300) 26
EXTERN (301) 27
REGISTER (302) 28
STATIC (303) 29
CONST (304) 74
RESTRICT (305) 76
VOLATILE (306) 75
CHAR (307) 60 61 62
INT (308) 32 34 35 36 39 41 43 45 53 54 55 56 57 58 59
DOUBLE (309) 65 66 68 69
FLOAT (310) 64 67
LONG (311) 38 39 40 41 42 43 44 45 49 50 51 52 56 57 58 59 66 69
_BOOL (312) 63
UNION (313) 133 134 135
STRUCT (314) 113 116 117 119
_COMPLEX (315) 67 68 69
SHORT (316) 31 32 33 34 46 47 53 54
ENUMBER (317)
INLINE (318) 30
SIGNED (319) 33 34 36 37 40 41 44 45 61
UNSIGNED (320) 46 47 48 49 50 51 52 53 54 55 56 57 58 59 62
VOID (321) 70
_IMAGINARY (322)
ELLIPSIS (323) 96
UPLUS (324)
UMINUS (325)
PREFIX_PLUSPLUS (326)
PREFIX_MINUSMINUS (327)
POSTFIX_PLUSPLUS (328)
POSTFIX_MINUSMINUS (329)


Nonterminals, with rules where they appear

$accept (99)
    on left: 0
start (100)
    on left: 1 2, on right: 0 2
top_level_decl (101)
    on left: 3 4, on right: 2
func_def (102)
    on left: 5, on right: 4
full_func_decl (103)
    on left: 6, on right: 5
decl_or_stmt_list (104)
    on left: 7 8, on right: 8 181
decl_or_stmt (105)
    on left: 9 10, on right: 7 8
decl (106)
    on left: 11 12 13, on right: 3 9
decl_spec (107)
    on left: 14 15 16 17 18 19 20 21 22 23, on right: 6 11 19 20 21
    22 23 99 100 101
init_decl_list (108)
    on left: 24 25, on right: 11 25
stg_spec (109)
    on left: 26 27 28 29, on right: 14 21
func_spec (110)
    on left: 30, on right: 18 23
type_spec (111)
    on left: 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48
    49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69
    70, on right: 15 19 123 205 208
struct_spec (112)
    on left: 71 72 73, on right: 13 16 20 124 206
type_qual (113)
    on left: 74 75 76, on right: 17 22
declarator (114)
    on left: 77 78, on right: 24 25 80 99 127 130
direct_decl (115)
    on left: 79 80 81 82, on right: 78 84 90 91 92 93 94
simple_decl (116)
    on left: 83, on right: 79
pointer_decl (117)
    on left: 84, on right: 77
pointer (118)
    on left: 85 86, on right: 84 86 87 89
abstract_decl (119)
    on left: 87 88 89, on right: 101 136
arr_decl (120)
    on left: 90 91, on right: 81
func_decl (121)
    on left: 92 93 94, on right: 6 82
param_type_list (122)
    on left: 95 96, on right: 92 140 144
param_list (123)
    on left: 97 98, on right: 95 96 98
param_decl (124)
    on left: 99 100 101, on right: 97 98
enum_type_spec (125)
    on left: 102 103, on right: 71
enum_type_def (126)
    on left: 104 105 106 107, on right: 102
enum_type_ref (127)
    on left: 108, on right: 103
enum_def_list (128)
    on left: 109 110, on right: 104 105 106 107 110
enum_constant_def (129)
    on left: 111 112, on right: 109 110
forward_decl (130)
    on left: 113, on right: 12
struct_type_spec (131)
    on left: 114 115, on right: 72
struct_type_def (132)
    on left: 116 117, on right: 114
struct_block (133)
    on left: 118, on right: 114 131
struct_type_ref (134)
    on left: 119, on right: 115
field_list (135)
    on left: 120 121, on right: 118 121
component_decl (136)
    on left: 122, on right: 120 121
component_decl_spec (137)
    on left: 123 124, on right: 122
component_decl_list (138)
    on left: 125 126, on right: 122 126
component_declarator (139)
    on left: 127 128, on right: 125 126
bit_field (140)
    on left: 129 130, on right: 128
union_type_spec (141)
    on left: 131 132, on right: 73
union_type_def (142)
    on left: 133 134, on right: 131
union_type_ref (143)
    on left: 135, on right: 132
direct_abstract_decl (144)
    on left: 136 137 138 139 140 141 142 143 144 145 146, on right:
    88 89 137 138 139 140
stmt (145)
    on left: 147 148 149 150 151 152 153 154 155 156 157, on right:
    10 148 152 160 161 163 165 166
conditional_stmt (146)
    on left: 159, on right: 150
@1 (147)
    on left: 158, on right: 159
conditional_body (148)
    on left: 160 161, on right: 159
iterative_stmt (149)
    on left: 163 165 166, on right: 151
@2 (150)
    on left: 162, on right: 163
@3 (151)
    on left: 164, on right: 165
label (152)
    on left: 167 168 169, on right: 148
const_expr (153)
    on left: 170 171, on right: 168
for_expr (154)
    on left: 172 173 174 175 176 177 178 179, on right: 166
compound_stmt (155)
    on left: 181 182, on right: 5 149
$@4 (156)
    on left: 180, on right: 181
return_stmt (157)
    on left: 183 184, on right: 156
null_stmt (158)
    on left: 185, on right: 157
primary_expr (159)
    on left: 186 187 188, on right: 189
postfix_expr (160)
    on left: 189 190 191 192 193 194, on right: 195 196 197 200 201
    202 203 207
subscript_expr (161)
    on left: 195, on right: 190
function_call (162)
    on left: 196 197, on right: 192
expr_list (163)
    on left: 198 199, on right: 196 199
comp_selec_expr (164)
    on left: 200 201, on right: 191
postinc_expr (165)
    on left: 202, on right: 193
postdec_expr (166)
    on left: 203, on right: 194
cast_expr (167)
    on left: 204 205 206, on right: 205 206 210 211 212 213 214 215
    218 219 220 221
unary_expr (168)
    on left: 207 208 209 210 211 212 213 214 215 216 217, on right:
    204 209 216 217 249 250 251 252 253 254 255 256 257 258 259
multiplicative_expr (169)
    on left: 218 219 220 221, on right: 219 220 221 222 223 224
additive_expr (170)
    on left: 222 223 224, on right: 223 224 225 226 227
shift_expr (171)
    on left: 225 226 227, on right: 226 227 228 229 230 231 232
relational_expr (172)
    on left: 228 229 230 231 232, on right: 229 230 231 232 233 234
    235
equality_expr (173)
    on left: 233 234 235, on right: 234 235 240 241
bitwise_or_expr (174)
    on left: 236 237, on right: 237 244 245
bitwise_xor_expr (175)
    on left: 238 239, on right: 236 237 239
bitwise_and_expr (176)
    on left: 240 241, on right: 238 239 241
logical_or_expr (177)
    on left: 242 243, on right: 243 246 247
logical_and_expr (178)
    on left: 244 245, on right: 242 243 245
conditional_expr (179)
    on left: 246 247, on right: 247 248
assignment_expr (180)
    on left: 248 249 250 251 252 253 254 255 256 257 258 259, on right:
    198 199 249 250 251 252 253 254 255 256 257 258 259 260 261
comma_expr (181)
    on left: 260 261, on right: 261 262
expr (182)
    on left: 262, on right: 112 138 142 147 152 159 163 165 173 174
    175 176 177 178 179 183 188 195 247
ident_list (183)
    on left: 263 264, on right: 94 264


State 0

    0 $accept: . start $end

    $default  reduce using rule 1 (start)

    start  go to state 1


State 1

    0 $accept: start . $end
    2 start: start . top_level_decl

    $end      shift, and go to state 2
    ENUM      shift, and go to state 3
    AUTO      shift, and go to state 4
    EXTERN    shift, and go to state 5
    REGISTER  shift, and go to state 6
    STATIC    shift, and go to state 7
    CONST     shift, and go to state 8
    RESTRICT  shift, and go to state 9
    VOLATILE  shift, and go to state 10
    CHAR      shift, and go to state 11
    INT       shift, and go to state 12
    DOUBLE    shift, and go to state 13
    FLOAT     shift, and go to state 14
    LONG      shift, and go to state 15
    _BOOL     shift, and go to state 16
    UNION     shift, and go to state 17
    STRUCT    shift, and go to state 18
    SHORT     shift, and go to state 19
    INLINE    shift, and go to state 20
    SIGNED    shift, and go to state 21
    UNSIGNED  shift, and go to state 22
    VOID      shift, and go to state 23

    top_level_decl    go to state 24
    func_def          go to state 25
    full_func_decl    go to state 26
    decl              go to state 27
    decl_spec         go to state 28
    stg_spec          go to state 29
    func_spec         go to state 30
    type_spec         go to state 31
    struct_spec       go to state 32
    type_qual         go to state 33
    enum_type_spec    go to state 34
    enum_type_def     go to state 35
    enum_type_ref     go to state 36
    forward_decl      go to state 37
    struct_type_spec  go to state 38
    struct_type_def   go to state 39
    struct_type_ref   go to state 40
    union_type_spec   go to state 41
    union_type_def    go to state 42
    union_type_ref    go to state 43


State 2

    0 $accept: start $end .

    $default  accept


State 3

  104 enum_type_def: ENUM . '{' enum_def_list '}'
  105              | ENUM . IDENT '{' enum_def_list '}'
  106              | ENUM . '{' enum_def_list ',' '}'
  107              | ENUM . IDENT '{' enum_def_list ',' '}'
  108 enum_type_ref: ENUM . IDENT

    IDENT  shift, and go to state 44
    '{'    shift, and go to state 45


State 4

   26 stg_spec: AUTO .

    $default  reduce using rule 26 (stg_spec)


State 5

   27 stg_spec: EXTERN .

    $default  reduce using rule 27 (stg_spec)


State 6

   28 stg_spec: REGISTER .

    $default  reduce using rule 28 (stg_spec)


State 7

   29 stg_spec: STATIC .

    $default  reduce using rule 29 (stg_spec)


State 8

   74 type_qual: CONST .

    $default  reduce using rule 74 (type_qual)


State 9

   76 type_qual: RESTRICT .

    $default  reduce using rule 76 (type_qual)


State 10

   75 type_qual: VOLATILE .

    $default  reduce using rule 75 (type_qual)


State 11

   60 type_spec: CHAR .

    $default  reduce using rule 60 (type_spec)


State 12

   35 type_spec: INT .

    $default  reduce using rule 35 (type_spec)


State 13

   65 type_spec: DOUBLE .
   68          | DOUBLE . _COMPLEX

    _COMPLEX  shift, and go to state 46

    $default  reduce using rule 65 (type_spec)


State 14

   64 type_spec: FLOAT .
   67          | FLOAT . _COMPLEX

    _COMPLEX  shift, and go to state 47

    $default  reduce using rule 64 (type_spec)


State 15

   38 type_spec: LONG .
   39          | LONG . INT
   42          | LONG . LONG
   43          | LONG . LONG INT
   50          | LONG . UNSIGNED
   52          | LONG . LONG UNSIGNED
   57          | LONG . UNSIGNED INT
   59          | LONG . LONG UNSIGNED INT
   66          | LONG . DOUBLE
   69          | LONG . DOUBLE _COMPLEX

    INT       shift, and go to state 48
    DOUBLE    shift, and go to state 49
    LONG      shift, and go to state 50
    UNSIGNED  shift, and go to state 51

    INT       [reduce using rule 38 (type_spec)]
    DOUBLE    [reduce using rule 38 (type_spec)]
    LONG      [reduce using rule 38 (type_spec)]
    UNSIGNED  [reduce using rule 38 (type_spec)]
    $default  reduce using rule 38 (type_spec)


State 16

   63 type_spec: _BOOL .

    $default  reduce using rule 63 (type_spec)


State 17

  133 union_type_def: UNION . '{'
  134               | UNION . IDENT '{'
  135 union_type_ref: UNION . IDENT

    IDENT  shift, and go to state 52
    '{'    shift, and go to state 53


State 18

  113 forward_decl: STRUCT . IDENT ';'
  116 struct_type_def: STRUCT . '{'
  117                | STRUCT . IDENT '{'
  119 struct_type_ref: STRUCT . IDENT

    IDENT  shift, and go to state 54
    '{'    shift, and go to state 55


State 19

   31 type_spec: SHORT .
   32          | SHORT . INT
   47          | SHORT . UNSIGNED
   54          | SHORT . UNSIGNED INT

    INT       shift, and go to state 56
    UNSIGNED  shift, and go to state 57

    INT       [reduce using rule 31 (type_spec)]
    UNSIGNED  [reduce using rule 31 (type_spec)]
    $default  reduce using rule 31 (type_spec)


State 20

   30 func_spec: INLINE .

    $default  reduce using rule 30 (func_spec)


State 21

   33 type_spec: SIGNED . SHORT
   34          | SIGNED . SHORT INT
   36          | SIGNED . INT
   37          | SIGNED .
   40          | SIGNED . LONG
   41          | SIGNED . LONG INT
   44          | SIGNED . LONG LONG
   45          | SIGNED . LONG LONG INT
   61          | SIGNED . CHAR

    CHAR   shift, and go to state 58
    INT    shift, and go to state 59
    LONG   shift, and go to state 60
    SHORT  shift, and go to state 61

    CHAR      [reduce using rule 37 (type_spec)]
    INT       [reduce using rule 37 (type_spec)]
    LONG      [reduce using rule 37 (type_spec)]
    SHORT     [reduce using rule 37 (type_spec)]
    $default  reduce using rule 37 (type_spec)


State 22

   46 type_spec: UNSIGNED . SHORT
   48          | UNSIGNED .
   49          | UNSIGNED . LONG
   51          | UNSIGNED . LONG LONG
   53          | UNSIGNED . SHORT INT
   55          | UNSIGNED . INT
   56          | UNSIGNED . LONG INT
   58          | UNSIGNED . LONG LONG INT
   62          | UNSIGNED . CHAR

    CHAR   shift, and go to state 62
    INT    shift, and go to state 63
    LONG   shift, and go to state 64
    SHORT  shift, and go to state 65

    CHAR      [reduce using rule 48 (type_spec)]
    INT       [reduce using rule 48 (type_spec)]
    LONG      [reduce using rule 48 (type_spec)]
    SHORT     [reduce using rule 48 (type_spec)]
    $default  reduce using rule 48 (type_spec)


State 23

   70 type_spec: VOID .

    $default  reduce using rule 70 (type_spec)


State 24

    2 start: start top_level_decl .

    $default  reduce using rule 2 (start)


State 25

    4 top_level_decl: func_def .

    $default  reduce using rule 4 (top_level_decl)


State 26

    5 func_def: full_func_decl . compound_stmt

    '{'  shift, and go to state 66

    compound_stmt  go to state 67


State 27

    3 top_level_decl: decl .

    $default  reduce using rule 3 (top_level_decl)


State 28

    6 full_func_decl: decl_spec . func_decl
   11 decl: decl_spec . init_decl_list ';'
   19 decl_spec: decl_spec . type_spec
   20          | decl_spec . struct_spec
   21          | decl_spec . stg_spec
   22          | decl_spec . type_qual
   23          | decl_spec . func_spec

    IDENT     shift, and go to state 68
    ENUM      shift, and go to state 3
    AUTO      shift, and go to state 4
    EXTERN    shift, and go to state 5
    REGISTER  shift, and go to state 6
    STATIC    shift, and go to state 7
    CONST     shift, and go to state 8
    RESTRICT  shift, and go to state 9
    VOLATILE  shift, and go to state 10
    CHAR      shift, and go to state 11
    INT       shift, and go to state 12
    DOUBLE    shift, and go to state 13
    FLOAT     shift, and go to state 14
    LONG      shift, and go to state 15
    _BOOL     shift, and go to state 16
    UNION     shift, and go to state 17
    STRUCT    shift, and go to state 69
    SHORT     shift, and go to state 19
    INLINE    shift, and go to state 20
    SIGNED    shift, and go to state 21
    UNSIGNED  shift, and go to state 22
    VOID      shift, and go to state 23
    '*'       shift, and go to state 70
    '('       shift, and go to state 71

    init_decl_list    go to state 72
    stg_spec          go to state 73
    func_spec         go to state 74
    type_spec         go to state 75
    struct_spec       go to state 76
    type_qual         go to state 77
    declarator        go to state 78
    direct_decl       go to state 79
    simple_decl       go to state 80
    pointer_decl      go to state 81
    pointer           go to state 82
    arr_decl          go to state 83
    func_decl         go to state 84
    enum_type_spec    go to state 34
    enum_type_def     go to state 35
    enum_type_ref     go to state 36
    struct_type_spec  go to state 38
    struct_type_def   go to state 39
    struct_type_ref   go to state 40
    union_type_spec   go to state 41
    union_type_def    go to state 42
    union_type_ref    go to state 43


State 29

   14 decl_spec: stg_spec .

    $default  reduce using rule 14 (decl_spec)


State 30

   18 decl_spec: func_spec .

    $default  reduce using rule 18 (decl_spec)


State 31

   15 decl_spec: type_spec .

    $default  reduce using rule 15 (decl_spec)


State 32

   13 decl: struct_spec . ';'
   16 decl_spec: struct_spec .

    ';'  shift, and go to state 85

    $default  reduce using rule 16 (decl_spec)


State 33

   17 decl_spec: type_qual .

    $default  reduce using rule 17 (decl_spec)


State 34

   71 struct_spec: enum_type_spec .

    $default  reduce using rule 71 (struct_spec)


State 35

  102 enum_type_spec: enum_type_def .

    $default  reduce using rule 102 (enum_type_spec)


State 36

  103 enum_type_spec: enum_type_ref .

    $default  reduce using rule 103 (enum_type_spec)


State 37

   12 decl: forward_decl .

    $default  reduce using rule 12 (decl)


State 38

   72 struct_spec: struct_type_spec .

    $default  reduce using rule 72 (struct_spec)


State 39

  114 struct_type_spec: struct_type_def . struct_block

    ENUM      shift, and go to state 3
    CHAR      shift, and go to state 11
    INT       shift, and go to state 12
    DOUBLE    shift, and go to state 13
    FLOAT     shift, and go to state 14
    LONG      shift, and go to state 15
    _BOOL     shift, and go to state 16
    UNION     shift, and go to state 17
    STRUCT    shift, and go to state 69
    SHORT     shift, and go to state 19
    SIGNED    shift, and go to state 21
    UNSIGNED  shift, and go to state 22
    VOID      shift, and go to state 23

    type_spec            go to state 86
    struct_spec          go to state 87
    enum_type_spec       go to state 34
    enum_type_def        go to state 35
    enum_type_ref        go to state 36
    struct_type_spec     go to state 38
    struct_type_def      go to state 39
    struct_block         go to state 88
    struct_type_ref      go to state 40
    field_list           go to state 89
    component_decl       go to state 90
    component_decl_spec  go to state 91
    union_type_spec      go to state 41
    union_type_def       go to state 42
    union_type_ref       go to state 43


State 40

  115 struct_type_spec: struct_type_ref .

    $default  reduce using rule 115 (struct_type_spec)


State 41

   73 struct_spec: union_type_spec .

    $default  reduce using rule 73 (struct_spec)


State 42

  131 union_type_spec: union_type_def . struct_block

    ENUM      shift, and go to state 3
    CHAR      shift, and go to state 11
    INT       shift, and go to state 12
    DOUBLE    shift, and go to state 13
    FLOAT     shift, and go to state 14
    LONG      shift, and go to state 15
    _BOOL     shift, and go to state 16
    UNION     shift, and go to state 17
    STRUCT    shift, and go to state 69
    SHORT     shift, and go to state 19
    SIGNED    shift, and go to state 21
    UNSIGNED  shift, and go to state 22
    VOID      shift, and go to state 23

    type_spec            go to state 86
    struct_spec          go to state 87
    enum_type_spec       go to state 34
    enum_type_def        go to state 35
    enum_type_ref        go to state 36
    struct_type_spec     go to state 38
    struct_type_def      go to state 39
    struct_block         go to state 92
    struct_type_ref      go to state 40
    field_list           go to state 89
    component_decl       go to state 90
    component_decl_spec  go to state 91
    union_type_spec      go to state 41
    union_type_def       go to state 42
    union_type_ref       go to state 43


State 43

  132 union_type_spec: union_type_ref .

    $default  reduce using rule 132 (union_type_spec)


State 44

  105 enum_type_def: ENUM IDENT . '{' enum_def_list '}'
  107              | ENUM IDENT . '{' enum_def_list ',' '}'
  108 enum_type_ref: ENUM IDENT .

    '{'  shift, and go to state 93

    $default  reduce using rule 108 (enum_type_ref)


State 45

  104 enum_type_def: ENUM '{' . enum_def_list '}'
  106              | ENUM '{' . enum_def_list ',' '}'

    IDENT  shift, and go to state 94

    enum_def_list      go to state 95
    enum_constant_def  go to state 96


State 46

   68 type_spec: DOUBLE _COMPLEX .

    $default  reduce using rule 68 (type_spec)


State 47

   67 type_spec: FLOAT _COMPLEX .

    $default  reduce using rule 67 (type_spec)


State 48

   39 type_spec: LONG INT .

    $default  reduce using rule 39 (type_spec)


State 49

   66 type_spec: LONG DOUBLE .
   69          | LONG DOUBLE . _COMPLEX

    _COMPLEX  shift, and go to state 97

    $default  reduce using rule 66 (type_spec)


State 50
